--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="images/facebook cover.png" />
         </div>
         <div class="cv_page">
-            <img class="photo photo_circle" src="images/history travels final.jpg" />
+            <img class="photo photo_circle" src="images/history travels.jpg" />
             <div class="card_name" style="">
                 <h1><span>HISTORY TOURS AND TRAVEL</span></h1>
                 <p style="text-align:center;">"THE COMPLETE TRAVEL SOLUTION"</p>
