--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta content="Keywords" name="" />
-    <meta property="og:image" content="http://inspiredigit.github.io/dbcard/images/history travels.jpg">
+    <meta property="og:image" content="https://inspiredigit.github.io/dbcard/images/history travels.jpg">
     <meta property="og:type" content="website" />
     <meta property="og:title" content=" - Business Car" />
     <meta property="og:description" content="hostory tours and travels, malappuram, Kerala" />
