--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ kottakkal, Kerala 676503
 
 
                 <div class="ol_h" style="" data-toggle="collapse" data-target="#glry_info1">
-                    <div class="l" style=""><i class="fa fa-image"></i></div>
+                    <div class="l" style=""><i class="fa fa-video-camera"></i></div>
                     <div class="t" style="">Videos</div>
                     <div class="p" style=""><i class="fa fa-angle-down arrowchange" aria-hidden="true"></i></div>
                 </div>
