--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <li><a style="" target="_blank" class="bg-wp" href="https://api.whatsapp.com/send?phone=918547523863&amp;text=Hi,%20I%20am%20%20shan&amp;source=&amp;data=&amp;app_absent="><i class="fab fa-whatsapp"></i></a></li>
                 <li><a class="bg-insta" href="https://instagram.com/shan_muhmmed?igshid=pbenij2ar5da" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                 <li><a class="bg-youtube" href="https://youtube.com/channel/UCbXlJ5mXPrsS6yK00Rxs5rw/" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
-                <li><a class="bg-linkedin" href="" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
+                <li><a class="bg-linkedin" href="https://inspiredigit.com/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
                 <div class="clearfix"></div>
             </ul>
         </div>
