--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#384349" />
     <title>history tours and travels</title>
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta content="Keywords" name="" />
+    <meta name="keywords" content="History toursand travels" />
+    <meta name="description" content="History toursand travels" />
+    <meta content="Keywords" name="History toursand travels" />
     <meta property="og:image" content="https://digicardpro.co.in/history/history/images/history travels.jpg">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="History toursand travels - Business card" />
+    <meta property="og:title" content="History tours and travels - Business card" />
     <meta property="og:description" content="hostory tours and travels, malappuram, Kerala" />
     <!-- CSS only -->
     <link href="includes/css/bootstrap.min.css" rel="stylesheet">
