--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta content="Keywords" name="History toursand travels" />
     <meta property="og:image" content="https://digicardpro.co.in/history/history/images/history travels.jpg">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="History tours and travels - Business card" />
+    <meta property="og:title" content="History tours and travels 
+				       - Business card" />
     <meta property="og:description" content="hostory tours and travels, malappuram, Kerala" />
     <!-- CSS only -->
     <link href="includes/css/bootstrap.min.css" rel="stylesheet">
