--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://digicardpro.co.in/history/history/images/history travels.jpg">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="History tours and travels  - Business card" />
-    <meta property="og:description" content="hostory tours and travels, malappuram, Kerala" />
+    <meta property="og:description" content="history tours and travels, malappuram, Kerala" />
     <!-- CSS only -->
     <link href="includes/css/bootstrap.min.css" rel="stylesheet">
     <div class="main-pnl">
