--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://digicardpro.co.in/history/history/images/history travels.jpg">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="History tours and travels - Business card" />
-    <meta property="og:description" content="history tours and travels, malappuram, Kerala" />
+    <meta property="og:description" content="history tours and travels, kottakkal, malappuram, Kerala" />
     <!-- CSS only -->
     <link href="includes/css/bootstrap.min.css" rel="stylesheet">
     <div class="main-pnl">
@@ -77,12 +77,12 @@
                 </li>
                 <li style="">
                     <div class="l" style=""><i class="fa fa-mobile "></i></div>
-                    <div class="r" style="" onclick="document.location='tel:+919747402402'">+91 8547523863</div>
+                    <div class="r" style="" onclick="document.location='tel:+918547523863'">+91 8547523863</div>
                     <div class="clearfix"></div>
                 </li>
                 <li style="">
 					<div class="l" style=""><i class="fa fa-phone fa-rotate-90"></i></div>
-					<div class="r" style="" onclick="document.location='tel:+919544402403'">+91 8547523863</div>
+					<div class="r" style="" onclick="document.location='tel:+918547523863'">+91 8547523863</div>
 					<div class="clearfix"></div>
 				</li>
                 <li style="">
