--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="cv_page">
             <img class="photo photo_circle" src="images/history travels.jpg" />
             <div class="card_name" style="">
-                <h1><span>HISTORY TOURS AND TRAVEL</span></h1>
+                <h1><span>HISTORY TOURS AND TRAVELS</span></h1>
                 <p style="text-align:center;">"THE COMPLETE TRAVEL SOLUTION"</p>
             </div>
             <hr class="hr1" style="">
