--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="Keywords" name="History tours and travels" />
     <meta property="og:image" content="https://digicardpro.co.in/history/history/images/history travels.jpg">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="History%20tours%20and%20travels - Business card" />
+    <meta property="og:title" content="History tours and travels - Business card" />
     <meta property="og:description" content="history tours and travels, kottakkal, malappuram, Kerala" />
     <!-- CSS only -->
     <link href="includes/css/bootstrap.min.css" rel="stylesheet">
