--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="Keywords" name="" />
     <meta property="og:image" content="">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content=" - Business Card" />
+    <meta property="og:title" content="Next digital learning - Business Card" />
     <meta property="og:description" content="next digital learning" />
     <!-- CSS only -->
     <link href="includes/css/bootstrap.min.css" rel="stylesheet">
