--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="theme-color" content="#384349" />
     <title>next digital learning</title>
     <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta content="Keywords" name="" />
+    <meta name="description" content="Next digital learning" />
+    <meta content="Keywords" name="Next digital learning" />
     <meta property="og:image" content="">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Next digital learning - Business Card" />
