--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta content="Keywords" name="Next digital learning" />
     <meta property="og:image" content="">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Next digital learning - Business Card" />
-    <meta property="og:description" content="next digital learning" />
+    <meta property="og:title" content="Next digital learning" />
+    <meta property="og:description" content="next digital learning kottakkal" />
     <!-- CSS only -->
     <link href="includes/css/bootstrap.min.css" rel="stylesheet">
     <div class="main-pnl">
